<resources>
    <string name="app_name">Let\'s Talk</string>
    <string name="let_s_talk">Let\'s Talk</string>
    <string name="connect_with_people">Connect with people</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="enter_username">Enter E-mail</string>
    <string name="e_mail">E-mail</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_you_password_again">Enter your password again</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="cancel">cancel</string>
    <string name="already_have_an_account_log_in_here">Already have an account Log in here -></string>
    <string name="create_one_here">Create one here</string>
    <string name="log_in">Log in</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="help_here">Help here</string>
    <string name="login_email">E-Mail</string>
    <string name="frequently_asked_questions">Frequently asked questions:</string>
    <string name="forget_you_password">Forget you Password?</string>
    <string name="unable_to_login">Unable to login?</string>
    <string name="change_username">Change Username</string>
    <string name="any_other_question_ask_here">Ask question or send us a feedback</string>
    <string name="send">Send</string>
    <string name="ask_your_question_here">Ask your question here</string>
    <string name="enter_you_email_here">Enter you email here</string>
    <string name="home_button">home_button</string>
    <string name="search_button">search_button</string>
    <string name="add_post_btn">add post btn</string>
    <string name="profile_button">profile button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="usernames">username</string>
    <string name="post">Post</string>
    <string name="clear">clear</string>
    <string name="what_s_on_your_mind">Whats on your mind?</string>
    <string name="like">like</string>
    <string name="image">image</string>
    <string name="comment">comment</string>
    <string name="status">status</string>
    <string name="menu">menu</string>
    <string name="change_your_username">Change your username</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="enter_new_password_again">Enter new Password again</string>
    <string name="save">Save</string>
</resources>