<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".helpActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="36dp"
        android:text="@string/frequently_asked_questions"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/resetbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="159dp"
        android:text="@string/forget_you_password" />

    <EditText
        android:layout_width="280sp"
        android:layout_height="50sp"
        android:id="@+id/resetemail"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="524dp"
        android:hint="@string/enter_you_email_here"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/noaccountbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="234dp"
        android:text="@string/unable_to_login" />

    <Button
        android:id="@+id/changeusrnamebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="308dp"
        android:text="@string/change_username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="378dp"
        android:text="@string/any_other_question_ask_here"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:layout_width="280sp"
        android:layout_height="50sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="188dp"
        android:hint="@string/ask_your_question_here"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/feedbackbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="118dp"
        android:text="@string/send" />

</RelativeLayout>