<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".registerActivity">

    <View
        android:id="@+id/opacityFilter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFEAEC"
        android:layout_alignParentBottom="true"
        android:alpha="0.5">
    </View>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="37dp"
        android:padding="5sp"
        android:text="@string/create_a_new_account"
        android:textColor="#252627"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="334dp"
        android:padding="5sp"
        android:text="@string/password"
        android:textColor="#252627"
        android:textSize="20sp" />

    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/password_txt"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="236dp"
        android:hint="@string/enter_your_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="5sp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="111dp"
        android:padding="5sp"
        android:text="@string/username"
        android:textColor="#252627"
        android:textSize="20sp" />

    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/username_txt"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="452dp"
        android:hint="@string/enter_username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="5sp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="221dp"
        android:padding="5sp"
        android:text="@string/e_mail"
        android:textColor="#252627"
        android:textSize="20sp" />

    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/email_txt"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="348dp"
        android:hint="@string/enter_your_e_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="5sp"
        android:textSize="20sp" />



    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/confirmpassword_txt"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="126dp"
        android:hint="@string/enter_you_password_again"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="5sp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="440dp"
        android:padding="5sp"
        android:text="@string/confirm_password"
        android:textColor="#252627"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="56dp"
        android:text="@string/register"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="251dp"
        android:layout_marginBottom="54dp"
        android:text="@string/cancel"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="609dp"
        android:padding="5sp"
        android:text="@string/already_have_an_account_log_in_here"
        android:textColor="#252627"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="275dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/nobackgroung_btn"
        android:text="@string/log_in"
        android:textSize="15sp" />


</RelativeLayout>