<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    tools:context=".postActivity">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usr_name"
        />

    <ImageButton
        android:id="@+id/homebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="4dp"
        app:srcCompat="@drawable/ic_baseline_home_24"
        android:contentDescription="@string/home_button" />

    <ImageButton
        android:id="@+id/searchbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="128dp"
        app:srcCompat="@drawable/ic_baseline_search_24"
        android:contentDescription="@string/search_button" />

    <ImageButton
        android:id="@+id/add_postbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/add_post_btn"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <ImageButton
        android:id="@+id/profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="59dp"
        app:srcCompat="@drawable/ic_baseline_person_pin_24"
        android:contentDescription="@string/profile_button" />

</RelativeLayout>